feat: add db create script

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,9 @@
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/sfg_prod
     username: sfg_prod_user
-    password: guru
+    password: password
   jpa:
     hibernate:
       ddl-auto: validate
