--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/sfg_prod
     username: sfg_prod_user
     password: password
+    platform: mysql
   jpa:
     hibernate:
       ddl-auto: validate
